--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "scratch-translate-extension-languages": "0.0.20181205140428",
     "socket.io-client": "2.0.4",
     "text-encoding": "0.7.0",
+    "three": "^0.104.0",
     "worker-loader": "^1.1.1"
   },
   "devDependencies": {
